--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "UI testing with Playwright for LocalCoding",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "playwright test",
+    "report": "playwright show-report"
   },
   "keywords": [],
   "author": "Rafail Ferre",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@playwright/test": "^1.45.0",
+    "@types/node": "^20.14.8"
+  }
 }
