--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "playwright test",
-    "report": "playwright show-report"
+    "test:debug": "playwright test --headed",
+    "report": "playwright show-report",
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx}'"
   },
   "keywords": [],
   "author": "Rafail Ferre",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.45.0",
-    "@types/node": "^20.14.8"
+    "@types/node": "^20.14.8",
+    "prettier": "^3.3.2"
   }
 }
